--- a/docker/Dockerfile.gNB.aerial.ubuntu20
+++ b/docker/Dockerfile.gNB.aerial.ubuntu20
@@ -37,6 +37,7 @@ RUN apt-get update && \
        moreutils \
        vim-tiny \
        nano \
+       libprotobuf-c-dev \
        # To build libnvipc
        cmake libpcap-dev libcunit1-dev libnuma-dev pkg-config
 
@@ -47,8 +48,8 @@ COPY . .
 RUN /bin/sh oaienv && \
     tar -xvzf nvipc_src.*.tar.gz && \
     cd nvipc_src.* && \
-    git init && \
-    git apply ../cmake_targets/tools/install_libraries_to_system.patch --verbose && \
+    # git init && \
+    # git apply ../cmake_targets/tools/install_libraries_to_system.patch --verbose && \
     rm -rf build && mkdir build && cd build && \
     cmake .. -DNVIPC_DPDK_ENABLE=OFF -DNVIPC_DOCA_ENABLE=OFF -DNVIPC_CUDA_ENABLE=OFF -DENABLE_SLT_RSP=ON && \
     make -j && make install
@@ -73,12 +74,14 @@ RUN apt-get update && \
         tzdata \
         libatlas3-base \
         libconfig9 \
+        libprotobuf-c1 \
         openssl \
         net-tools \
         iperf \
         iproute2 \
         iputils-ping \
         gdb \
+        nano \
         libusb-1.0-0 && \
     rm -rf /var/lib/apt/lists/*
 
