--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/vnf.sa.band78.fr1.273PRB.Aerial.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/vnf.sa.band78.fr1.273PRB.Aerial.conf
@@ -1,4 +1,4 @@
-Active_gNBs = ( "gNB-OAI-devkti07");
+Active_gNBs = ( "gNB-OAI-devkit07");
 # Asn1_verbosity, choice in: none, info, annoying
 Asn1_verbosity = "none";
 
@@ -21,6 +21,7 @@ gNBs =
                   snssaiList = (
                     {
                       sst = 1;
+                      #sd = 0;
                     }
                   );
                   });
@@ -135,14 +136,14 @@ gNBs =
         restrictedSetConfig                                         = 0,
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         = -90;
+        p0_NominalWithGrant                                         = -90; # -86;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
 # 0 = neither, 1= group hopping, 2=sequence hopping
         pucchGroupHopping                                           = 0;
         hoppingId                                                   = 40;
-        p0_nominal                                                  = -90;
+        p0_nominal                                                  = -90; # -86;
 # ssb_PositionsInBurs_BitmapPR
 # 1=short, 2=medium, 3=long
       ssb_PositionsInBurst_PR                                       = 2;
@@ -169,12 +170,12 @@ gNBs =
       # dl_UL_TransmissionPeriodicity
       # 0=ms0p5, 1=ms0p625, 2=ms1, 3=ms1p25, 4=ms2, 5=ms2p5, 6=ms5, 7=ms10
       dl_UL_TransmissionPeriodicity                                 = 5; #6;
-      nrofDownlinkSlots                                             = 3; #7;
-      nrofDownlinkSymbols                                           = 6;
-      nrofUplinkSlots                                               = 1; #2;
+      nrofDownlinkSlots                                             = 3; #6;
+      nrofDownlinkSymbols                                           = 6; #10;
+      nrofUplinkSlots                                               = 1; #3;
       nrofUplinkSymbols                                             = 0;
 
-      ssPBCH_BlockPower                                             = -15;
+      ssPBCH_BlockPower                                             = -15; # -34;
   }
 
   );
@@ -190,7 +191,12 @@ gNBs =
 
 
     ////////// AMF parameters:
-    amf_ip_address = ({ ipv4 = "192.168.70.132"; });
+    amf_ip_address      = ( { ipv4       = "192.168.70.132";
+                              ipv6       = "192:168:30::17";
+                              active     = "yes";
+                              preference = "ipv4";
+                            }
+                          );
 
 
     NETWORK_INTERFACES :
@@ -200,6 +206,7 @@ gNBs =
         GNB_INTERFACE_NAME_FOR_NGU               = "enp6s0";
         GNB_IPV4_ADDRESS_FOR_NGU                 = "10.100.1.207/22";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
+        GNB_PORT_FOR_NGU                         = 2152;
     };
 
   }
@@ -208,22 +215,22 @@ gNBs =
 MACRLCs = (
 {
   num_cc           = 1;
+  tr_s_preference  = "aerial";
+  tr_s_shm_prefix  = "nvipc";
   remote_s_address = "127.0.0.1"; // pnf addr [!]
   local_s_address  = "127.0.0.2"; // vnf addr
   local_s_portc    = 50001; // vnf p5 port
   remote_s_portc   = 50000; // pnf p5 port [!]
   local_s_portd    = 50011; // vnf p7 port [!]
   remote_s_portd   = 50010; // pnf p7 port [!]
-  tr_s_preference             = "aerial";
   tr_n_preference             = "local_RRC";
-  pusch_TargetSNRx10          = 200; #150;
-  pucch_TargetSNRx10          = 200; #200;
+  pusch_TargetSNRx10          = 300; #280;
+  pucch_TargetSNRx10          = 100; #100;
   ulsch_max_frame_inactivity  = 10;
-  dl_max_mcs = 28;
-  ul_max_mcs = 28;
+  dl_max_mcs = 26; # 28;
+  ul_max_mcs = 18; # 28;
 }
 );
-
 
 security = {
   # preferred ciphering algorithms
